# m5cardputer_doom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flash.sh  merge_firmware.sh  partitions.csv  partitions_huge.csv  process_log.py  sdkconfig  sdkconfig.old  wad_sizes
GbaWadUtil/: GbaWadUtil.pro  doomtypes.h  gbadoom.wad  main.cpp  mus2mid.c  wadfile.cpp  wadfile.h  wadprocessor.cpp  wadprocessor.h
components/LovyanGFX/: CMakeLists.txt  library.json
components/mooncake/src/app/: app_manager.cpp  app_register.cpp
components/mooncake/src/input_system/: input_device_register.cpp
gcc_plugin_wrap_mem_access/: Makefile  README.md  mmap_test.c  parse-tree.h  wrap_memaccess.cc
main/: CMakeLists.txt  cardputer.cpp  cardputer_doom.cpp  libc_wrap.c  mmap.c  mmap.h  mmap_test.c  spi_cache.c  spi_cache.h
main/apps/: apps.h
main/apps/app_doom/: app_doom.cpp  app_doom.h
main/apps/app_doom/assets/: doom_big.h  doom_small.h
main/apps/app_doom/gbadoom/include/: g_game.h  global_data.h
main/apps/app_doom/gbadoom/source/: i_main.c  i_sound.c  i_system.c  i_system_esps3.cpp  s_sound.c  v_video.c
main/apps/app_env/: app_env.cpp  app_env.h
main/apps/app_env/assets/: env_big.h  env_small.h
main/apps/app_env/lib/: Adafruit_BMP280.cpp  Adafruit_BMP280.h  SensirionI2CSht4x.cpp  SensirionI2CSht4x.h  SensirionRxFrame.cpp
main/apps/app_ir/: app_ir.cpp  app_ir.h
main/apps/app_ir/assets/: ir_big.h  ir_small.h
main/apps/app_radio/: M5Cardputer_WebRadio.cpp  app_radio.cpp  app_radio.h
main/apps/app_radio/assets/: radio_big.h  radio_small.h
main/apps/app_record/: app_record.cpp  app_record.h
main/apps/app_scales/: app_scales.cpp  app_scales.h
main/apps/app_scales/SCALES/: UNIT_SCALES.cpp  UNIT_SCALES.h
main/apps/app_scales/assets/: scales_big.h  scales_small.h
main/apps/app_set_wifi/: app_set_wifi.cpp  app_set_wifi.h
main/apps/app_timer/: app_timer.cpp  app_timer.h
main/apps/app_wifi_scan/: app_wifi_scan.cpp  app_wifi_scan.h
main/apps/launcher/: launcher.h
main/apps/launcher/port/: port.cpp
main/apps/launcher/views/keyboard_bar/: keyboard_bar.cpp
main/apps/launcher/views/menu/: menu.cpp
main/apps/launcher/views/system_bar/: system_bar.cpp
main/apps/launcher/views/system_bar/assets/: bat4.h  bat5.h
main/apps/utils/esp_now_wrap/: esp_now_wrap.c
main/apps/utils/theme/: theme_define.h
main/apps/utils/wifi_common_test/: wifi_common_test.cpp  wifi_common_test.h
main/doom/include/: d_think.h  doom_iwad.h  g_game.h  global_data.h  global_init.h  midifile.h  p_mobj.h  p_saveg.h  s_sound.h  w_wad.h
main/doom/source/: d_main.c  doom_iwad.c  f_wipe.c  g_game.c  hu_lib.c  i_sound.c  i_system_esps3.c  i_video.c  m_cheat.c  m_menu.c  midifile.c  opl.c  oplplayer.c  p_saveg.c  p_setup.c  p_tick.c  r_data.c  r_hotpath.iwram.c  s_sound.c  st_lib.c  w_wad.c  z_zone.c
main/fs/: README.md  fat.c  fat.h  main.example.cc  sd.c  sd.h  utils.c  utils.h
main/hal/: common_define.h  hal.h  hal_cardputer.cpp  hal_cardputer.h
main/hal/button/: Button.cpp
main/hal/display/: hal_display.hpp
main/hal/mic/: Mic_Class.hpp
main/hal/speaker/: Speaker_Class.cpp  Speaker_Class.hpp
wad_converter/: doomtypes.h  extra_lumps.h  gen_extralumps.py  mus2mid.h  wadconverter.c
wad_converter/extralumps/: M_ARUN.lmp  M_GAMMA.lmp  M_NMARE.lmp  STGANUM0.lmp  STGANUM1.lmp  STGANUM2.lmp  STGANUM3.lmp  STGANUM4.lmp  STGANUM5.lmp  STGANUM6.lmp  STGANUM7.lmp  STGANUM8.lmp  STGANUM9.lmp
